<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt;&lt;br /&gt;on your smartphone or computer&lt;br /&gt;and enter this code</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You&apos;re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won&apos;t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won&apos;t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won&apos;t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won&apos;t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won&apos;t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_candid">About Candid</string>
    <string name="anon_text">Invite your friends anonymously for me.</string>
    <string name="app_name">Candid</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="automatically_delete">Automatically delete inactive threads after 2 days</string>
    <string name="badge_all_star">You&apos;re the lifeblood of the community. You contribute, interact and engage like no one else.</string>
    <string name="badge_explorer">You&apos;re a curious soul. The new and unfamiliar intrigue you.</string>
    <string name="badge_giver">A generous spirit, you support others in the community without expectation of reward.</string>
    <string name="badge_gossip">If there&apos;s a juicy story to be told, you&apos;re here to tell it.</string>
    <string name="badge_hater">You get your kicks by tearing others down. You prefer tossing out insults to offering solutions.</string>
    <string name="badge_influencer">When you speak, people listen. You get others interested in any given topic.</string>
    <string name="badge_new">You&apos;re a newcomer to the Candid community, and the possibilities are endless.</string>
    <string name="badge_positive">You bring optimism and a can-do attitude to the table and refuse to let the haters get to you.</string>
    <string name="badge_socializer">You put yourself out there. You have an opinion and aren&apos;t afraid to share it.</string>
    <string name="badges">Badges</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chatting_as">You are chatting as</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="com.crashlytics.android.build_id">a5e82eb6-9f5c-41d0-97ce-c75321ce4a29</string>
    <string name="comment_deleted">Unable to find comment</string>
    <string name="comment_edit_details">If you want to change or add a photo, please delete this comment and make a new comment instead.</string>
    <string name="comment_edit_empty">Blank posts are not allowed.</string>
    <string name="comment_edit_title">Comment Text</string>
    <string name="connect">Connect</string>
    <string name="contacts_button">Get Contacts</string>
    <string name="contacts_header">Connect Your Contacts</string>
    <string name="contacts_subheader">We also need access to your contacts. Don&apos;t worry! Nobody will be able to identify you, but we&apos;ll let you know when a post is from an anonymous friend.</string>
    <string name="delete_group">Delete Group</string>
    <string name="delete_messages_myself">Delete messages myself</string>
    <string name="delete_post">Delete Post</string>
    <string name="disabled">Disabled</string>
    <string name="edit_group">Edit Group</string>
    <string name="edit_post">Edit Post</string>
    <string name="give_your_group_a_name">Give your group a name</string>
    <string name="group_details">View</string>
    <string name="hide_post">Don&apos;t Show Me This</string>
    <string name="hint_start_typing">start typing</string>
    <string name="join_group">Join Group</string>
    <string name="keep_enabled">Keep Enabled</string>
    <string name="leave_group">Leave Group</string>
    <string name="message_user">Message User</string>
    <string name="mute_post">Mute Post Activity</string>
    <string name="mute_thread_tutorial">Do you want to mute this thread?</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="report_group">Report Group</string>
    <string name="report_post">Report Post</string>
    <string name="skip">Skip</string>
    <string name="unmute_post">Unmute Post</string>
    <string name="what_is_your_group_about">What is your group about?</string>
    <string name="yes">Yes</string>
    <string name="you_can_always_change_this_in_your_settings">You can always change this in your settings</string>
    <string name="you_can_set_how_you_want_to_delete_your_message">Great! You can also set how you want to delete your messages.</string>
    <string name="you_received_a_message_do_you_want_to_keep_messaging_enabled">You&apos;ve received a message! Do you want to keep messaging enabled?</string>
</resources>