<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:paddingLeft="30dp" android:paddingTop="50dp" android:paddingRight="30dp" android:paddingBottom="50dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@id/group_name_placeholder" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="16sp" android:textStyle="bold" android:id="@id/group_name_header" android:paddingLeft="4dp" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/give_your_group_a_name" />
        <android.support.v7.widget.AppCompatEditText android:textColorHint="#aaaaaa" android:id="@id/group_name" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_start_typing" android:singleLine="true" android:maxLength="59" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberDecimal|phone" />
        <Button android:enabled="false" android:textColor="0x106000b" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/next" android:background="@drawable/orange_button" android:layout_width="UNKNOWN_DATA_0x6401" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/next" />
    </LinearLayout>
    <FrameLayout android:id="@um$d/progress_bar" android:visibility="gone" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <ProgressBar android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x5001" android:layout_height="UNKNOWN_DATA_0x5001" style="@g$h/Widget_AppCompat_ProgressBar" />
    </FrameLayout>
</FrameLayout>
