<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent"
    <RelativeLayout android:background="0x106000c" android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.8" />
    <RelativeLayout android:id="@id/post_mute_header" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001" android:layout_alignParentTop="true">
        <ImageView android:layout_width="UNKNOWN_DATA_0x1901" android:layout_height="match_parent" android:layout_margin="10dp" android:src="@drawable/mute_icon_enabled" android:scaleType="fitCenter" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ImageView android:id="@id/tutorial_mute_arrow" android:background="@drawable/groups_discover_arrow_white" android:layout_width="UNKNOWN_DATA_0x3201" android:layout_height="UNKNOWN_DATA_0x6401" android:layout_marginRight="15dp" android:layout_below="@id/post_mute_header" android:layout_alignParentRight="true" />
    <TextView android:textSize="24dp" android:textColor="0x106000b" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/mute_text" android:layout_width="UNKNOWN_DATA_0xc801" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/mute_thread_tutorial" android:layout_below="@id/tutorial_mute_arrow" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_below="@id/mute_text">
        <TextView android:textSize="18dp" android:textColor="0x106000b" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/tutorial_mute_yes" android:background="@drawable/green_button" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_margin="10dp" android:text="@string/yes" />
        <TextView android:textSize="18dp" android:textColor="0x106000b" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/tutorial_mute_no" android:background="@drawable/red_button" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_margin="10dp" android:text="@string/no" />
    </LinearLayout>
</RelativeLayout>
