<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/container" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@id/blur_image" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerCrop" />
    <FrameLayout android:id="@id/badge_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true"
        <FrameLayout android:id="@id/message_container" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingBottom="5dp" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35dp">
            <LinearLayout android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@id/message_container_enabled" android:background="0x106000b" android:paddingBottom="10dp" android:layout_width="UNKNOWN_DATA_0x12c01" android:layout_height="wrap_content">
                <TextView android:textSize="20dp" android:textStyle="bold" android:textColor="@color/gossip" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/badge_title_enabled" android:paddingTop="30dp" android:paddingBottom="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textSize="18sp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/badge_desc_enabled" android:paddingLeft="20dp" android:paddingRight="20dp" android:paddingBottom="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/you_received_a_message_do_you_want_to_keep_messaging_enabled" />
                <TextView android:textSize="16dp" android:textStyle="bold" android:textColor="0x106000b" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/keep_enabled" android:background="@drawable/orange_button" android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="10dp" android:text="@string/keep_enabled" />
                <TextView android:textSize="16dp" android:textStyle="bold" android:textColor="0x106000b" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/disabled" android:background="@drawable/grey_button" android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="10dp" android:text="@string/disabled" />
                <TextView android:textSize="11dp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="20dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/you_can_always_change_this_in_your_settings" />
            </LinearLayout>
            <LinearLayout android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@id/message_container_delete_message" android:background="0x106000b" android:paddingLeft="20dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x12c01" android:layout_height="wrap_content">
                <TextView android:textSize="20dp" android:textStyle="bold" android:textColor="@color/gossip" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/badge_title_delete_message" android:paddingTop="30dp" android:paddingBottom="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textSize="18sp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/badge_desc_delete_message" android:paddingBottom="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/you_can_set_how_you_want_to_delete_your_message" />
                <RelativeLayout android:id="@id/manual_delete_message" android:background="@drawable/empty_checkmark_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="20dp">
                    <ImageView android:id="@id/manual_checkmark" android:layout_width="UNKNOWN_DATA_0x3201" android:layout_height="UNKNOWN_DATA_0x3201" android:src="@drawable/empty_checkmark" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <TextView android:textColor="0x106000e" android:id="@id/manual_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete_messages_myself" android:layout_toRightOf="@id/manual_checkmark" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/auto_delete_message" android:background="@drawable/empty_checkmark_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@id/auto_checkmark" android:layout_width="UNKNOWN_DATA_0x3201" android:layout_height="UNKNOWN_DATA_0x3201" android:src="@drawable/empty_checkmark" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <TextView android:textColor="0x106000e" android:id="@id/auto_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/automatically_delete" android:layout_toRightOf="@id/auto_checkmark" android:layout_centerVertical="true" />
                </RelativeLayout>
                <Button android:enabled="false" android:textSize="16dp" android:textStyle="bold" android:textColor="0x106000b" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/finish" android:background="@drawable/orange_button" android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginBottom="10dp" android:text="Finish" />
                <TextView android:textSize="11dp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="20dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/you_can_always_change_this_in_your_settings" />
            </LinearLayout>
        </FrameLayout>
        <ImageView android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/badge_icon" android:layout_width="UNKNOWN_DATA_0x4601" android:layout_height="UNKNOWN_DATA_0x4601" android:src="@drawable/message_badge" />
        <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/message_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:layout_marginRight="15dp" android:src="@drawable/close_x" />
    </FrameLayout>
</RelativeLayout>
